# fake-news-detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.app  README.md  docker-compose.yaml  init-airflow-db.sh  init_db_full.py  init_db_main.py  main.py  pyproject.toml  requirements.txt  server.py  start_system.sh  test_api_config.py  test_api_endpoints.py  test_ner.py
backend/: main.py  verifier.py  verifier_old.py
crawler/: producer.py
dags/: daily_crawl_dag.py  weekly_retrain_dag.py
dashboard/: app.py
data/: build_index.py
dataset/: build_vector_db.py  code.py  import_data.py  test_search.py  upadte-type.py  update-type.py
debug/: debug_claim.py  debug_comparison.py  debug_model_v3.py  debug_retrieval.py  debug_segmentation.py  debug_v4.py  debug_v5.py
embeded-vector/: cancel_all_batches.py  check_batch_status.py  check_embeddings.py  check_output_file.py  download_all_results.py  download_result.py  embeded.py  export_to_jsonl.py  import_all_results.py  import_results.py  list_all_batches.py  parallel_summarize.py  summary.py  upload_all_batches.py  upload_batch.py  upload_batches_sequential.py  upload_one_by_one.py
extension/: manifest.json  popup.html  popup.js
model/: FakeNewsDetection.ipynb  generate_smart_data.py  hybrid_system.py  launch_notebook.py  retrain_nli.py  retrain_pipeline.py  test_connection.py  test_notebook_setup.py  train_claim_detector.py  train_classifier.ipynb  train_classifier.py  train_final_classifier.py
processor/: consumer.py  rebuild_knowledge_base.py
scraper-fake-news/: Best.py  clean_data.py  scrape.py
scripts/: batch_run.py  build_knowledge_base.py  fact_comparator.py  fact_extractor.py  generate_nli_data.py  migrate_db.py  processor.py  train_nli_model.py
test/: check_search.py  debug_search.py  test_flow.py  test_logic_5vs500.py  verifier.py
